# small_vector

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
include/jacl/: small_vector.hh
tests/: CMakeLists.txt  small_vector_test.cc
